--- a/index.html
+++ b/index.html
@@ -9,12 +9,32 @@
 
     <!-- Bootstrap CSS v5.0.2 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="./asset/css/style.css">
 </head>
 
 <body>
 
+    <div class="container">
+        <div class="row">
+            <form>
+                <select id="level">
+                    <option value="default" selected="selected">scegli il livello</option>
+                    <option value="easy">easy</option>
+                    <option value="medium">medium</option>
+                    <option value="hard">hard</option>
+                </select>
+            </form>
+        </div>
+        <div class="row">
 
+        </div>
+        <ul id="grid" class="d-flex flex-wrap">
+
+        </ul>
+    </div>
+
+
+    <script src="./asset/js/main.js"></script>
 </body>
 
 </html>
